[gd_scene load_steps=10 format=3 uid="uid://ufrgocyonmho"]

[ext_resource type="Script" path="res://scripts/levels/6-0_citySplash.gd" id="1_pnt3o"]
[ext_resource type="Texture2D" uid="uid://bpxcl4sber3v1" path="res://assets/images/background/cityenvironment.png" id="2_03kie"]
[ext_resource type="Theme" uid="uid://dctbregm4ijln" path="res://assets/themes/buttonTheme.tres" id="3_g6icw"]
[ext_resource type="Texture2D" uid="uid://7mk2r2g22pqx" path="res://assets/images/ui/button-blank.png" id="4_g54lr"]
[ext_resource type="Texture2D" uid="uid://b43bp8hdog3co" path="res://assets/images/ui/button-blank_click.png" id="5_xt3ax"]
[ext_resource type="Texture2D" uid="uid://dqeaxjc3n8x4" path="res://assets/images/ui/button-blank_hover.png" id="6_sqsjj"]

[sub_resource type="Animation" id="Animation_a5gqd"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4hiwk"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rem3y"]
_data = {
"Fade": SubResource("Animation_a5gqd"),
"RESET": SubResource("Animation_4hiwk")
}

[node name="IntroCutscene" type="Node2D"]
script = ExtResource("1_pnt3o")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_03kie")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="UI"]
wait_time = 5.0
autostart = true

[node name="backButton" type="TextureButton" parent="UI"]
texture_filter = 1
custom_minimum_size = Vector2(200, 65)
anchors_preset = -1
anchor_left = 0.828
anchor_top = 0.056
anchor_right = 0.961
anchor_bottom = 0.117
offset_left = -0.760132
offset_top = 0.519997
offset_right = 0.880005
offset_bottom = -0.360008
theme = ExtResource("3_g6icw")
texture_normal = ExtResource("4_g54lr")
texture_pressed = ExtResource("5_xt3ax")
texture_hover = ExtResource("6_sqsjj")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/backButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_g6icw")
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.0941176, 1)
text = "Skip
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScreenTransition" type="CanvasLayer" parent="."]
layer = 50

[node name="FadeScreen" type="ColorRect" parent="ScreenTransition"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition/FadeScreen"]
libraries = {
"": SubResource("AnimationLibrary_rem3y")
}

[connection signal="timeout" from="UI/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="UI/backButton" to="." method="_on_button_pressed"]
